# TetriSFML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tetris-C++_SFML  main.cpp
SFML-2.5.1/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
include/: Board.h  Game.h  Menu.h  Piece.h
src/: Board.cpp  Game.cpp  Menu.cpp  Piece.cpp  main.cpp
